syntax = "proto3";

option go_package = "social/pkg/proto/gate";

import "struct.proto";

//user <-> gate 之间-用户消息[0x1000,0x1fff]

message GateMessageMin//0x1000#消息-最小值
{
}

message GateRegisterReq//0x1001#注册请求 user->gate
{
  ServiceKey serviceKey = 1;
  string token = 2;//从login获取的token,用来验证身份
}
message GateRegisterRes//0x1002#注册响应 gate->user
{
}

message GateLogoutReq//0x1003#注销请求 user->gate
{
}
message GateLogoutRes//0x1004#注销响应 gate->user
{
}

message GateMessageMax//0x1fff#消息-最大值
{
}