syntax = "proto3";

option go_package = "social/pkg/proto";

message ServiceKey{ //服务key
  uint32 zoneID = 1;//区域ID
  string serviceName = 2;//服务名称
  uint32 serviceID = 3;//服务ID
}

